force-app/main/default/objects/Course_Activity_Profile_Data__c/Course_Activity_Profile_Data__c.object-meta.xml
<CustomObject>
    <label>Course Activity Profile Data</label>
    <nameField>
        <label>Course Name123</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Activity Profile Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>