force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;),
HYPERLINK(&quot;/partners2/apex/Course_Participation?id=&quot;+Id,Name,&quot;_self&quot;),HYPERLINK(&quot;/apex/Course_Participation?id=&quot; +Id,Name,&quot;_self&quot;))</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>