force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Delivery_Context__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Context__c</fullName>
    <label>Delivery Context</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Primary School</fullName>
            </value>
            <value>
                <fullName>Secondary School</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>