force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Duration_of_each_session_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_each_session_minutes__c</fullName>
    <label>Duration of each session (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>