force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Lower_Age_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Age_Limit__c</fullName>
    <label>Lower Age Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>