force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Members</label>
    <type>Checkbox</type>
</CustomField>