force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Number_of_classroom_sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_classroom_sessions__c</fullName>
    <label>Number of sessions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>