force-app/main/default/objects/Course_Activity_Profile_Data__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Activity Profile Data</relationshipLabel>
    <relationshipName>Course_Activity_Profile_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>