force-app/main/default/objects/Course_Activity_Profile_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Course_Name__c</columns>
    <columns>Course_Type__c</columns>
    <columns>Comments__c</columns>
    <columns>Organization__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>